todo-project/backend/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  namespace: todo
spec:
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: pyryl/todo-backend@sha256:d7b103efc367373dcaed17242d1d655bdd35ec03460cd1ccf294c3129a7a0b7e
