todo-project/backend/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: todo-backend
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 3000
