todo-project/backend/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ing
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: '/todos'
        backend:
          service:
            name: todo-backend-svc
            port: 
              number: 1234
